src/render/snapshots/openclank__render__chat_view__tests__empty_chat.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
