src/render/snapshots/openclank__render__chat_view__tests__message_with_tool_result.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ──────────────────────────────────────────┐
│You: [tool result]                              │
│       file1.txt                                │
│       file2.txt                                │
│       file3.txt                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
