src/render/snapshots/openclank__render__chat_view__tests__message_with_tool_use_block.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ──────────────────────────────────────────┐
│You: list files                                 │
│                                                │
│Claude: Let me check.                           │
│        [tool: bash]                            │
│          ls -la                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
