src/render/snapshots/openclank__render__chat_view__tests__single_user_message.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ────────────────────────────────┐
│You: hello                            │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
