src/render/snapshots/openclank__render__chat_view__tests__streaming_draft_empty_placeholder.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ────────────────────────────────┐
│You: hello                            │
│                                      │
│Claude: ...                           │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
