src/render/snapshots/openclank__render__chat_view__tests__tool_error_result_is_distinct.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ──────────────────────────────────────────┐
│You: [tool error]                               │
│       command not found: foobar                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
