src/render/snapshots/openclank__render__chat_view__tests__user_and_assistant_messages.snap
---
source: src/render/chat_view.rs
expression: output
---
┌ Chat ────────────────────────────────┐
│You: hello                            │
│                                      │
│Claude: Hi there! How can I help?     │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
